# rabbitmq-consumer

./: .env.dist  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml
.cargo/: config
config/: config_dev.toml  config_prod.toml
docker/: docker-compose.test.yml
docker/images/consumer/: Dockerfile
docker/images/rabbitmq/: Dockerfile
docker/scripts/consumer/: start.sh
src/: executor.rs  lib.rs  main.rs  utils.rs
src/client/: mod.rs
src/client/consumer/: channel.rs  connection.rs  message.rs  mod.rs
src/client/executor/: events.rs  mod.rs  waiter.rs
src/client/tests/: mod.rs
src/config/: file.rs  mod.rs
src/config/database/: mod.rs  schema.rs
src/config/queue/: config.rs  mod.rs  model.rs
src/config/tests/: mod.rs
src/consumer/: message.rs  mod.rs
src/consumer/tests/: mod.rs
src/data/: config.rs  database.rs  mod.rs  models.rs  plain.rs
src/data/tests/: mod.rs
src/logger/: mod.rs
tests/: client.rs  config.rs
