[package]
    name = "rabbitmq-consumer"
    version = "1.0.0"
    authors = ["Dario Cancelliere <dario.cancelliere@facile.it>"]
    edition = "2018"

[lib]
    name = "rabbitmq_consumer_lib"
    path = "src/lib.rs"

[profile.release]
    lto = true

[dependencies]
    async-std = "^1.6"
    tokio = { version = "^0.2", features = ["full"] }
    futures = "^0.3"
    lapin = "^1.2"
    toml = "^0.5"
    serde = "^1.0"
    serde_derive = "^1.0"
    diesel = { version = "^1.4", features = ["mysql", "chrono", "r2d2"] }
    chrono = { version = "^0.4", features = ["serde"] }
    env_logger = "^0.7"
    base64 = "^0.9"
    clap = "^2.33"
    crystalsoft-utils = "^0.1"
    openssl = "^0.10"

    # For static building
    openssl-sys = { version = "*", features = ["vendored"] }

# For static building
[patch.crates-io]
    mysqlclient-sys = { git = "https://github.com/chrismoos/mysqlclient-sys", rev = "fd1723f0e25bbe75454022b4ff001cfb34346586" }
