[package]
    name = "rabbitmq-consumer"
    version = "1.2.1"
    authors = ["Dario Cancelliere <dario.cancelliere@facile.it>"]
    edition = "2018"

[lib]
    name = "rabbitmq_consumer_lib"
    path = "src/lib.rs"

[profile.release]
    lto = true

[dependencies]
    async-std = "^1.8"
    tokio = { version = "^1.0", features = ["full"] }
    tokio-stream = "^0.1"
    futures = "^0.3"
    lapin = "^1.6"
    toml = "^0.5"
    serde = "^1.0"
    serde_derive = "^1.0"
    diesel = { version = "^1.4", features = ["mysql", "chrono", "r2d2"] }
    chrono = { version = "^0.4", features = ["serde"] }
    log = "^0.4"
    env_logger = "^0.8"
    base64 = "^0.13"
    clap = "^2.33"
    crystalsoft-utils = "^0.1"
